k8s/folly/apps/pbx/pbx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pbx
  namespace: pbx
  labels:
    app.kubernetes.io/name: pbx
    app.kubernetes.io/part-of: pbx
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pbx
      app.kubernetes.io/part-of: pbx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pbx
        app.kubernetes.io/part-of: pbx
    spec:
      containers:
        - image: jonpulsifer/asterisk
          imagePullPolicy: IfNotPresent
          name: asterisk
          ports:
            - containerPort: 5060
              hostPort: 5060
              protocol: TCP
            - containerPort: 5060
              hostPort: 5060
              protocol: UDP
            - containerPort: 5061
              hostPort: 5061
              protocol: TCP
            - containerPort: 5061
              hostPort: 5061
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/asterisk/sip.conf
              subPath: sip.conf
      volumes:
        - name: config
          emptyDir: {}
        - name: sip-conf
          configMap:
            name: sip-conf
